--- a/assets/main.css
+++ b/assets/main.css
@@ -1,72 +1,132 @@
 /***THE CSS RESET***/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+/* 1. Use a more-intuitive box-sizing model */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+*, *::before, *::after {
+  box-sizing: border-box;
 }
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
+/* 2. Remove default margin */
+* {
+  margin: 0;
 }
 
 body {
-  line-height: 1;
+  /* 3. Add accessible line-height */
+  line-height: 1.5;
+  /* 4. Improve text rendering */
+  -webkit-font-smoothing: antialiased;
 }
 
-ol, ul {
-  list-style: none;
+/* 5. Improve media defaults */
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
 }
 
-blockquote, q {
-  quotes: none;
+/* 6. Inherit fonts for form controls */
+input, button, textarea, select {
+  font: inherit;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
+/* 7. Avoid text overflows */
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
 }
 
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
+/* 8. Improve line wrapping */
+p {
+  text-wrap: pretty;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
+/*
+9. Create a root stacking context
+ */
+#root, #__next {
+  isolation: isolate;
 }
 
 /***THE START OF THE MAIN CODE***/
-.header {
-  margin-left: 1.3rem;
-}
-.header h1 {
-  color: hsl(234, 29%, 20%);
-  font-size: 2.5rem;
-  font-weight: 700;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.header p {
-  font-size: 1rem;
-  color: hsl(234, 29%, 20%);
-  font-weight: 400;
+/***THE MAIN STYLES***/
+/***THE FONT IMPORT***/
+:root {
+  --DarkSlateGrey: hsl(234, 29%, 20%);
+  --CharcoalGrey: hsl(235, 18%, 26%);
+  --Grey: hsl(231, 7%, 60%);
+  --White: hsl(0, 0%, 100%);
 }
 
-.aboutList li {
+html {
+  font-family: "Roboto", sans-serif;
+}
+html p, html ul {
+  color: var(--DarkSlateGrey);
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.mobile-logo {
+  max-width: 100%;
+  width: 100%;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+.form-container h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: var(--DarkSlateGrey);
+}
+.form-container ul {
   list-style: none;
-  margin-left: 1.3rem;
+  padding: 0;
+}
+.form-container ul li {
+  display: flex;
+  margin-bottom: 0.6rem;
+}
+.form-container ul .measuringSuccess {
+  margin-top: -1.5rem;
+}
+.form-container ul p {
+  padding-top: 1.5rem;
+}
+.form-container ul .muchMore {
+  padding-top: 0;
+}
+.form-container ul img {
+  margin-right: 1rem;
+}
+.form-container .emailAddress {
+  font-weight: 700;
+  margin-top: 2rem;
+  margin-bottom: 0.4rem;
+}
+.form-container .email, .form-container button {
+  width: 100%;
+}
+.form-container .email {
+  padding: 0.5rem;
+  border: 1px solid var(--Grey);
+  border-radius: 5px;
+  margin-bottom: 1rem;
+}
+.form-container button {
+  background-color: var(--DarkSlateGrey);
+  color: var(--White);
+  padding: 0.5rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 1rem;
 }/*# sourceMappingURL=main.css.map */
