--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,73 +1,136 @@
 /***THE CSS RESET***/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+*, *::before, *::after {
+	box-sizing: border-box;
+  }
+  
+  * {
 	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+  }
+  
+  body {
+	line-height: 1.5;
+	-webkit-font-smoothing: antialiased;
+  }
+  
+  img, picture, video, canvas, svg {
 	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-  /***THE START OF THE MAIN CODE***/
-
-.header {
-    margin-left: 1.3rem;
-  h1 {
-    color:  hsl(234, 29%, 20%);
-    font-size: 2.5rem;
-    font-weight: 700;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+	max-width: 100%;
+  }
+  
+  input, button, textarea, select {
+	font: inherit;
+  }
+  
+  p, h1, h2, h3, h4, h5, h6 {
+	overflow-wrap: break-word;
   }
   
   p {
-    font-size: 1rem;
-    color: hsl(234, 29%, 20%);
-    font-weight: 400;
+	text-wrap: pretty;
   }
   
-}
-
-    
-.aboutList {
-  li {
-    list-style: none;
-    margin-left: 1.3rem;
+  h1, h2, h3, h4, h5, h6 {
+	text-wrap: balance;
   }
-}
+  
+  #root, #__next {
+	isolation: isolate;
+  }
+  
+  /***THE MAIN STYLES***/
+  :root {
+	--DarkSlateGrey: hsl(234, 29%, 20%);
+	--CharcoalGrey: hsl(235, 18%, 26%);
+	--Grey: hsl(231, 7%, 60%);
+	--White: hsl(0, 0%, 100%);
+  }
+  
+  html {
+	font-family: 'Roboto', sans-serif;
+  }
+  
+  p, ul {
+	color: var(--DarkSlateGrey);
+	font-weight: 400;
+	font-size: 16px;
+  }
+  
+  .mobile-logo {
+	max-width: 100%;
+	width: 100%;
+  }
+  
+  .form-container {
+	display: flex;
+	flex-direction: column;
+	padding-left: 1.3rem;
+	padding-right: 1.3rem;
+	margin-top: 2rem;
+  
+	h1 {
+	  font-size: 2rem;
+	  margin-bottom: 1rem;
+	  color: var(--DarkSlateGrey);
+	}
+  
+	ul {
+	  list-style: none;
+	  padding: 0;
+  
+	  li {
+		display: flex;
+		margin-bottom: 0.6rem;
+	  }
+  
+	  .measuringSuccess {
+		margin-top: -1.5rem;
+	  }
+  
+	  p {
+		padding-top: 1.5rem;
+	  }
+  
+	  .muchMore {
+		padding-top: 0;
+	  }
+  
+	  img {
+		margin-right: 1rem;
+	  }
+	}
+  
+	.emailAddress {
+	  font-weight: 700;
+	  margin-top: 2rem;
+	  margin-bottom: 0.4rem;
+	}
+  
+	.email, button {
+	  width: 100%;
+	}
+  
+	.email {
+	  padding: 0.5rem;
+	  border: 1px solid var(--Grey);
+	  border-radius: 5px;
+	  margin-bottom: 1rem;
+	}
+  
+	button {
+	  background-color: var(--DarkSlateGrey);
+	  color: var(--White);
+	  padding: 0.5rem;
+	  border: none;
+	  border-radius: 5px;
+	  cursor: pointer;
+	  font-weight: 700;
+	  font-size: 1rem;
+	  transition: background-color 0.3s ease;
+  
+	  &:hover {
+		background-color: darken(var(--DarkSlateGrey), 10%);
+	  }
+	}
+  
+	margin-bottom: 1rem;
+  }
