did the first design for mobile via editing the html and SCSS

--- a/assets/main.css
+++ b/assets/main.css
@@ -68,65 +68,124 @@ html p, html ul {
   font-size: 16px;
 }
 
-.mobile-logo {
-  max-width: 100%;
-  width: 100%;
+/***THE MEDIA QUERIES***/
+/******TABLET******/
+@media only screen and (max-width: 1023px) {
+  .mobile-logo {
+    max-width: 100%;
+    width: 100%;
+  }
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .form-container h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: var(--DarkSlateGrey);
+  }
+  .form-container ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 1rem;
+  }
+  .form-container ul div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .form-container ul p {
+    align-self: center;
+  }
+  .form-container ul img {
+    margin-right: 1rem;
+  }
+  .form-container .emailAddress {
+    font-weight: 700;
+    margin-top: 2rem;
+    margin-bottom: 0.4rem;
+  }
+  .form-container .email, .form-container button {
+    width: 100%;
+  }
+  .form-container .email {
+    padding: 0.5rem;
+    border: 1px solid var(--Grey);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+  }
+  .form-container button {
+    background-color: var(--DarkSlateGrey);
+    color: var(--White);
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 1rem;
+  }
 }
-
-.form-container {
-  display: flex;
-  flex-direction: column;
-  padding-left: 1.3rem;
-  padding-right: 1.3rem;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-}
-.form-container h1 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-  color: var(--DarkSlateGrey);
-}
-.form-container ul {
-  list-style: none;
-  padding: 0;
-}
-.form-container ul li {
-  display: flex;
-  margin-bottom: 0.6rem;
-}
-.form-container ul .measuringSuccess {
-  margin-top: -1.5rem;
-}
-.form-container ul p {
-  padding-top: 1.5rem;
-}
-.form-container ul .muchMore {
-  padding-top: 0;
-}
-.form-container ul img {
-  margin-right: 1rem;
-}
-.form-container .emailAddress {
-  font-weight: 700;
-  margin-top: 2rem;
-  margin-bottom: 0.4rem;
-}
-.form-container .email, .form-container button {
-  width: 100%;
-}
-.form-container .email {
-  padding: 0.5rem;
-  border: 1px solid var(--Grey);
-  border-radius: 5px;
-  margin-bottom: 1rem;
-}
-.form-container button {
-  background-color: var(--DarkSlateGrey);
-  color: var(--White);
-  padding: 0.5rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-weight: 700;
-  font-size: 1rem;
+/******MOBILE******/
+@media only screen and (max-width: 768px) {
+  .mobile-logo {
+    max-width: 100%;
+    width: 100%;
+  }
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+  }
+  .form-container h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    color: var(--DarkSlateGrey);
+  }
+  .form-container ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 1rem;
+  }
+  .form-container ul div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  .form-container ul p {
+    align-self: center;
+  }
+  .form-container ul img {
+    margin-right: 1rem;
+  }
+  .form-container .emailAddress {
+    font-weight: 700;
+    margin-top: 2rem;
+    margin-bottom: 0.4rem;
+  }
+  .form-container .email, .form-container button {
+    width: 100%;
+  }
+  .form-container .email {
+    padding: 0.5rem;
+    border: 1px solid var(--Grey);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+  }
+  .form-container button {
+    background-color: var(--DarkSlateGrey);
+    color: var(--White);
+    padding: 0.5rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 1rem;
+  }
 }/*# sourceMappingURL=main.css.map */
