--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,136 +1,232 @@
-/***THE CSS RESET***/
+
+  /***THE CSS RESET***/
+/* 1. Use a more-intuitive box-sizing model */
 *, *::before, *::after {
 	box-sizing: border-box;
   }
   
+  /* 2. Remove default margin */
   * {
 	margin: 0;
   }
   
   body {
+	/* 3. Add accessible line-height */
 	line-height: 1.5;
+	/* 4. Improve text rendering */
 	-webkit-font-smoothing: antialiased;
   }
   
+  /* 5. Improve media defaults */
   img, picture, video, canvas, svg {
 	display: block;
 	max-width: 100%;
   }
   
+  /* 6. Inherit fonts for form controls */
   input, button, textarea, select {
 	font: inherit;
   }
   
+  /* 7. Avoid text overflows */
   p, h1, h2, h3, h4, h5, h6 {
 	overflow-wrap: break-word;
   }
   
+  /* 8. Improve line wrapping */
   p {
 	text-wrap: pretty;
   }
-  
   h1, h2, h3, h4, h5, h6 {
 	text-wrap: balance;
   }
   
+  /*
+	9. Create a root stacking context
+  */
   #root, #__next {
 	isolation: isolate;
   }
-  
+
+  /***THE START OF THE MAIN CODE***/
+
   /***THE MAIN STYLES***/
+
+  /***THE FONT IMPORT***/
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
   :root {
 	--DarkSlateGrey: hsl(234, 29%, 20%);
-	--CharcoalGrey: hsl(235, 18%, 26%);
-	--Grey: hsl(231, 7%, 60%);
-	--White: hsl(0, 0%, 100%);
+    --CharcoalGrey: hsl(235, 18%, 26%);
+    --Grey: hsl(231, 7%, 60%);
+    --White: hsl(0, 0%, 100%);
   }
-  
+
   html {
 	font-family: 'Roboto', sans-serif;
-  }
-  
-  p, ul {
-	color: var(--DarkSlateGrey);
-	font-weight: 400;
-	font-size: 16px;
-  }
-  
-  .mobile-logo {
-	max-width: 100%;
-	width: 100%;
-  }
-  
-  .form-container {
-	display: flex;
-	flex-direction: column;
-	padding-left: 1.3rem;
-	padding-right: 1.3rem;
-	margin-top: 2rem;
-  
-	h1 {
-	  font-size: 2rem;
-	  margin-bottom: 1rem;
-	  color: var(--DarkSlateGrey);
+	p, ul {
+		color: var(--DarkSlateGrey);
+		font-weight: 400;
+		font-size: 16px;
 	}
+  }
+
+
+
+
+  /***THE MEDIA QUERIES***/
+  @media only screen and (max-width: 1215px) {
+	
   
-	ul {
-	  list-style: none;
-	  padding: 0;
+  }
   
-	  li {
+  /******TABLET******/
+  @media only screen and (max-width: 1023px) {
+	.mobile-logo {
+		max-width: 100%;
+		width: 100%;
+	}
+	
+	.form-container {
 		display: flex;
-		margin-bottom: 0.6rem;
-	  }
-  
-	  .measuringSuccess {
-		margin-top: -1.5rem;
-	  }
-  
-	  p {
-		padding-top: 1.5rem;
-	  }
-  
-	  .muchMore {
-		padding-top: 0;
-	  }
-  
-	  img {
-		margin-right: 1rem;
-	  }
+		flex-direction: column;
+		padding-left: 1.3rem;
+		padding-right: 1.3rem;
+		margin-top:2rem;
+		
+		h1 {
+			font-size: 2rem;
+			margin-bottom: 1rem;
+			color: var(--DarkSlateGrey);
+		}
+		
+		ul {
+			list-style: none;
+			padding: 0;
+			margin-top: 1rem;
+
+			div {
+				display: flex;
+				align-items: center;
+				margin-bottom: 1rem;
+			}
+
+			p {
+				align-self: center;
+			}
+		
+			img {
+				margin-right: 1rem;
+			}
+		}
+	
+		.emailAddress {
+			font-weight: 700;
+			margin-top: 2rem;
+			margin-bottom: 0.4rem;
+		}
+	
+		.email, button {
+			width: 100%;
+		}
+	
+		.email {
+			padding: 0.5rem;
+			border: 1px solid var(--Grey);
+			border-radius: 5px;
+			margin-bottom: 1rem;
+		}
+	
+		button {
+			background-color: var(--DarkSlateGrey);
+			color: var(--White);
+			padding: 0.5rem;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			font-weight: 700;
+			font-size: 1rem;
+		}
+	
+		margin-bottom: 1rem;
 	}
+
+	
   
-	.emailAddress {
-	  font-weight: 700;
-	  margin-top: 2rem;
-	  margin-bottom: 0.4rem;
+  }
+  
+  
+  
+  /******MOBILE******/
+  @media only screen and (max-width: 768px) {
+	.mobile-logo {
+		max-width: 100%;
+		width: 100%;
 	}
-  
-	.email, button {
-	  width: 100%;
+	
+	.form-container {
+		display: flex;
+		flex-direction: column;
+		padding-left: 1.3rem;
+		padding-right: 1.3rem;
+		margin-top:2rem;
+		
+		h1 {
+			font-size: 2rem;
+			margin-bottom: 1rem;
+			color: var(--DarkSlateGrey);
+		}
+		
+		ul {
+			list-style: none;
+			padding: 0;
+			margin-top: 1rem;
+
+			div {
+				display: flex;
+				align-items: center;
+				margin-bottom: 1rem;
+			}
+
+			p {
+				align-self: center;
+			}
+		
+			img {
+				margin-right: 1rem;
+			}
+		}
+	
+		.emailAddress {
+			font-weight: 700;
+			margin-top: 2rem;
+			margin-bottom: 0.4rem;
+		}
+	
+		.email, button {
+			width: 100%;
+		}
+	
+		.email {
+			padding: 0.5rem;
+			border: 1px solid var(--Grey);
+			border-radius: 5px;
+			margin-bottom: 1rem;
+		}
+	
+		button {
+			background-color: var(--DarkSlateGrey);
+			color: var(--White);
+			padding: 0.5rem;
+			border: none;
+			border-radius: 5px;
+			cursor: pointer;
+			font-weight: 700;
+			font-size: 1rem;
+		}
+	
+		margin-bottom: 1rem;
 	}
-  
-	.email {
-	  padding: 0.5rem;
-	  border: 1px solid var(--Grey);
-	  border-radius: 5px;
-	  margin-bottom: 1rem;
-	}
-  
-	button {
-	  background-color: var(--DarkSlateGrey);
-	  color: var(--White);
-	  padding: 0.5rem;
-	  border: none;
-	  border-radius: 5px;
-	  cursor: pointer;
-	  font-weight: 700;
-	  font-size: 1rem;
-	  transition: background-color 0.3s ease;
-  
-	  &:hover {
-		background-color: darken(var(--DarkSlateGrey), 10%);
-	  }
-	}
-  
-	margin-bottom: 1rem;
+
+	
   }
